Update reseting password flow

--- a/01.00-API/wwwroot/MailTemplates/NewPassTemplate.html
+++ b/01.00-API/wwwroot/MailTemplates/NewPassTemplate.html
@@ -24,7 +24,7 @@
                     <!--{0} is username-->
                     <br />
                     <br />
-                    {1}
+                    Password mới của bạn là {1}
                     <!--{1} is content-->
                     <br />
                     Xin cảm ơn,
