fix upload file, edit html form

--- a/01.00-API/wwwroot/MailTemplates/MonthlyStatTemplate.html
+++ b/01.00-API/wwwroot/MailTemplates/MonthlyStatTemplate.html
@@ -7,7 +7,7 @@
     <body>
         <header>
             <img alt="logo" src="cid:{logo}" />
-            <span style="font-size:25px;">Group Study System</span>
+            <span style="font-size:25px;"> <br />Group Study System</span>
         </header>
         <div class="mail-body">
             <div>
