--- a/01.00-API/wwwroot/MailTemplates/NewPassTemplate.html
+++ b/01.00-API/wwwroot/MailTemplates/NewPassTemplate.html
@@ -10,7 +10,7 @@
             <tr>
                 <td align="center" style="background-color:lightskyblue">
                     <img alt="logo" src="cid:{logo}"
-                    <span style="font-size:25px;">   Group Study System  </span>
+                    <span style="font-size:25px;">  <br /> Group Study System  </span>
                     <br />
                     <br />
                 </td>
