--- a/01.00-API/wwwroot/MailTemplates/MailTemplate.html
+++ b/01.00-API/wwwroot/MailTemplates/MailTemplate.html
@@ -9,8 +9,8 @@
         <table width="100%">
             <tr>
                 <td align="center" style="background-color:lightskyblue">
-                    <img alt="logo" src="cid:{logo}"
-                    <span style="font-size:25px;">   Group Study System  </span>
+                    <img alt="logo" src="cid:{logo}" 
+                    <span style="font-size:25px;">  <br /> Group Study System  </span>
                     <br />
                     <br />
                 </td>
